--- a/kafaka/src/main/resources/application.properties
+++ b/kafaka/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.data.cassandra.contact-points=localhost
 spring.data.cassandra.port=9042
 spring.data.cassandra.keyspace-name=itaudb
-spring.data.cassandra.username=
-spring.data.cassandra.password=
+spring.data.cassandra.username=root
+spring.data.cassandra.password=root
+server.port=8081
 
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=itau-consumer
@@ -10,4 +11,4 @@ spring.kafka.consumer.group-id=itau-consumer
 spring.kafka.consumer.auto-offset-reset=latest
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.consumer.topic=uscsdemo
+spring.kafka.consumer.topic=foo
